apps/monitoring/manifests/goldpinger/daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: goldpinger
  namespace: monitoring
  labels:
    app: goldpinger
    app.kubernetes.io/name: goldpinger
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: goldpinger
      app.kubernetes.io/name: goldpinger
  template:
    metadata:
      labels:
        app: goldpinger
        app.kubernetes.io/name: goldpinger
    spec:
      serviceAccount: goldpinger-serviceaccount
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: goldpinger
          image: docker.io/bloomberg/goldpinger:3.11.1
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          resources:
            #limits:
            #  memory: 80Mi
            requests:
              cpu: 1m
              memory: 40Mi
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 20
            periodSeconds: 5
      tolerations:
        - operator: Exists
